ozgarishlar botda korib chiqildi